This is the hello world page that will soon become my website project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!doctype html>
 <html>
-<head>
-<h1>Hello World!</h1>
-</head>
-<body><p>This is my first html website.</p></body>
+	<HEAD><H1>Hello World!<H1></HEAD>
+	<body><p>This is a new super sick website by NMB.</p></body>
 </html>
