--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
-	<HEAD><H1>Hello World!<H1></HEAD>
-	<body><p>This is a new super sick website by NMB.</p></body>
+	<head><h1>Hello World!</h1></head>
+	<body>
+		<p>This is a new super sick website by NMB.</p>
+	</body>
 </html>
