--- a/index.html
+++ b/index.html
@@ -3,5 +3,18 @@
 	<head><h1>Hello World!</h1></head>
 	<body>
 		<p>This is a new super sick website by NMB.</p>
+		    <div id="red"> <!-- the grandest grandparent div -->
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">
+                <div id="violet"></div> <!-- the grandest child div -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 	</body>
 </html>
