--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-	<head><h1>Hello World!</h1></head>
+	<head><h1>Hello World!</h1>
+<link rel="stylesheet" href="main.css">
+	</head>
 	<body>
 		<p>This is a new super sick website by NMB.</p>
 		    <div id="red"> <!-- the grandest grandparent div -->
