--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!doctype html>
 <html>
-	<head><h1>Hello World!</h1>
-<link rel="stylesheet" href="main.css">
+	<head>
+		<title>J.B.E.</title>
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<p>This is a new super sick website by NMB.</p>
+		<header>
+			<h1>Jeremy Bradley Earl</h1>
+		</header>
+			<nav>
+				<a href="landscapes.html">Landscapes</a>
+				<a href="dreamscapes.html">Dreamscapes</a>
+				<a href="biography.html">Biography</a>
+				<a href="mailto:jeremy@woodsist.com">Contact</a>
+				<a href="https://twitter.com/WOODSIST">Twitter</a>
+			</nav>
+		<main>
+			<img src="images/Earl_1.jpg" alt="Jeremy Bradley Earl print Landscape #1 number 1" width="800" height="600">
+		</main>
 	</body>
 </html>
