--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!doctype html>
 <html>
-<head>
-	<title>Mom!</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
-	<header>
-		<h1>Happy Mother's Day</h1>
-	</header>
-	<div class="main">
-		<p>To my beautiful, wonderful, caring, funny, talented mumsie. <br>
-		I love you very much! <br>
-		I hope you enjoy this rainbow sunset slideshow I made you.<br></p>
-	</div>
-	<div class="picture">
-		<a href="page_14.html">previous</a> <img src="images/1.jpg" width="800" height="500"> <a href="page_2.html">next</a>
-	</div>
-	<div class="signature">
-		<p>Love, Nicole</p>
-	</div>
-</body>
+	<head>
+		<title>J.B.E.</title>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<header>
+			<h1>Jeremy Bradley Earl</h1>
+		</header>
+			<nav>
+				<a href="landscapes.html">Landscapes</a>
+				<a href="dreamscapes.html">Dreamscapes</a>
+				<a href="biography.html">Biography</a>
+				<a href="mailto:jeremy@woodsist.com">Contact</a>
+				<a href="https://twitter.com/WOODSIST">Twitter</a>
+			</nav>
+		<main>
+			<img src="images/Earl_1.jpg" alt="Jeremy Bradley Earl print Landscape #1 number 1" width="800" height="600">
+		</main>
+	</body>
 </html>
