--- a/album_covers.html
+++ b/album_covers.html
@@ -13,15 +13,14 @@
 			</div>
 		</header>
 			<nav class="row">
-				<a href="index.html" class="col-2" id="active">Home</a>
+				<a href="index.html" class="col-2">Home</a>
 				<a href="prints.html" class="col-2">Prints</a>
 				<a href="drawings.html" class="col-2">Drawings</a>
-				<a href="album_covers.html" class="col-2">Album Covers</a>
+				<a href="album_covers.html" class="col-2" id="active">Album Covers</a>
 				<a href="biography.html" class="col-2">Biography</a>
 				<a href="contact.html" class="col-2">Contact</a>
 			</nav>
 		<main class="row">
-			<img src="images/Earl_1.jpg" alt="Jeremy Bradley Earl print Landscape #1 number 1" width=1024px>
 		</main>
 		<footer class="row">
 			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
