--- a/biography.html
+++ b/biography.html
@@ -1,23 +1,33 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>J.B.E.</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<header>
-			<h1>Jeremy Bradley Earl</h1>
+		<div class="container">
+		<header class="row">
+			<div class="col-12">
+				<h1>Jeremy Bradley Earl</h1>
+			</div>
 		</header>
-			<nav>
-				<a href="landscapes.html">Landscapes</a>
-				<a href="dreamscapes.html">Dreamscapes</a>
-				<a href="biography.html">Biography</a>
-				<a href="mailto:jeremy@woodsist.com">Contact</a>
-				<a href="https://twitter.com/WOODSIST">Twitter</a>
+			<nav class="row">
+				<a href="index.html" class="col-2">Home</a>
+				<a href="prints.html" class="col-2">Prints</a>
+				<a href="drawings.html" class="col-2">Drawings</a>
+				<a href="album_covers.html" class="col-2">Album Covers</a>
+				<a href="biography.html" class="col-2" id="active">Biography</a>
+				<a href="contact.html" class="col-2">Contact</a>
 			</nav>
-		<main>
+		<main class="row">
 			<img src="images/Jeremy_Earl_by_Tom Law.jpg" alt="Jeremy Bradley Earl" width="400" height="320">
 			<p>Jeremy Bradley Earl is a NY-based visual artist and musician in <br> the psychedelic folk rock band Woods. His drawings and collages <br>evoke shamanic illustrations for magical campfire folklore with an<br> easy, loose line work that endears and maintains an allure of mystery. <br>His work has been featured on countless album and tape covers <br> for his own record label, <a href="http://woodsist.com" target="_blank">Woodsist</a> / Fuck It Tapes, and is responsible <br>for creating an iconic aesthetic that is synonymous with the visual <br>language of contemporary homegrown / indie / folk / cassette culture.</p>
 		</main>
+		<footer class="row">
+			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
+			</p>
+		</footer>
+		</div>
 	</body>
 </html>
