--- a/index.html
+++ b/index.html
@@ -1,32 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>J.B.E.</title>
-		<link rel="stylesheet" href="css/styles.css">
-	</head>
-	<body>
-		<div class="container">
-		<header class="row">
-			<div class="col-12">
-				<h1>Jeremy Bradley Earl</h1>
-			</div>
-		</header>
-			<nav class="row">
-				<a href="index.html" class="col-2" id="active">Home</a>
-				<a href="prints.html" class="col-2">Prints</a>
-				<a href="drawings.html" class="col-2">Drawings</a>
-				<a href="album_covers.html" class="col-2">Album Covers</a>
-				<a href="biography.html" class="col-2">Biography</a>
-				<a href="contact.html" class="col-2">Contact</a>
-			</nav>
-		<main class="row">
-			<img src="images/Earl_1.jpg" alt="Jeremy Bradley Earl print Landscape #1 number 1" width=1024px>
-		</main>
-		<footer class="row">
-			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
-			</p>
-		</footer>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Jeremy Bradley Earl</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- custom style sheet -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Jeremy Bradley Earl</h1>
+        </div>
+        <div class="col-sm-12">
+          <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Prints</a></li>
+                <li><a href="#">Drawings</a></li>
+                <li><a href="#">Album Covers</a></li>
+                <li><a href="#">Clothing</a></li>
+                <li><a href="#">Bio</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Store</a></li>
+              </ul>            
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+        </div>
+        <div class="col-sm-12">
+          <div id="home-carousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="images/Landscapes/Earl_1.jpg" alt="Landscape #1 by Jeremy Bradley Earl">
+              </div>
+              <div class="item">
+                <img src="images/Landscapes/Earl_2.jpg" alt="Landscape #2 by Jeremy Bradley Earl">
+              </div>
+              <div class="item">
+                <img src="images/Landscapes/Earl_3.jpg" alt="Landscape #3 by Jeremy Bradley Earl">
+              </div>
+              <div class="item">
+                <img src="images/Landscapes/Earl_4.jpg" alt="Landscape #4 by Jeremy Bradley Earl">
+              </div>
+              <div class="item">
+                <img src="images/Landscapes/Earl_5.jpg" alt="Landscape #5 by Jeremy Bradley Earl">
+              </div>
+              <div class="item">
+                <img src="images/Landscapes/Earl_6.jpg" alt="Landscape #6 by Jeremy Bradley Earl">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+      <div class="col-sm-12" id="footer">
+          <p class="footer">&copy All artwork by Jeremy Bradley Earl. All right reserved.</p>
+        </div>
+      </div>
+    </div><!-- end container -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
