--- a/biography.html
+++ b/biography.html
@@ -8,26 +8,35 @@
 	<body>
 		<div class="container">
 		<header class="row">
-			<div class="col-12">
+			<div id="header">
 				<h1>Jeremy Bradley Earl</h1>
 			</div>
-		</header>
-			<nav class="row">
+		
+			<nav class="row" id="nav">
 				<a href="index.html" class="col-2">Home</a>
 				<a href="prints.html" class="col-2">Prints</a>
 				<a href="drawings.html" class="col-2">Drawings</a>
 				<a href="album_covers.html" class="col-2">Album Covers</a>
 				<a href="biography.html" class="col-2" id="active">Biography</a>
 				<a href="contact.html" class="col-2">Contact</a>
+				<a href="store.html" class="col-2">Store</a>
 			</nav>
+		</header>
 		<main class="row">
-			<img src="images/Jeremy_Earl_by_Tom Law.jpg" alt="Jeremy Bradley Earl" width="400" height="320">
-			<p>Jeremy Bradley Earl is a NY-based visual artist and musician in <br> the psychedelic folk rock band Woods. His drawings and collages <br>evoke shamanic illustrations for magical campfire folklore with an<br> easy, loose line work that endears and maintains an allure of mystery. <br>His work has been featured on countless album and tape covers <br> for his own record label, <a href="http://woodsist.com" target="_blank">Woodsist</a> / Fuck It Tapes, and is responsible <br>for creating an iconic aesthetic that is synonymous with the visual <br>language of contemporary homegrown / indie / folk / cassette culture.</p>
+			<div id="bio-pic">
+				<img src="images/Jeremy_Earl_by_Tom Law.jpg" alt="Jeremy Bradley Earl">
+			</div>
+			<div id="bio-par">
+				<p>Jeremy Bradley Earl is a NY-based visual artist and musician in the psychedelic folk rock band Woods. His drawings and collages evoke shamanic illustrations for magical campfire folklore with an easy, loose line work that endears and maintains an allure of mystery. His work has been featured on countless album and tape covers for his own record label, <a href="http://woodsist.com" target="_blank">Woodsist</a> / Fuck It Tapes, and is responsible for creating an iconic aesthetic that is synonymous with the visual language of contemporary homegrown / indie / folk / cassette culture.</p>
+			</div>
 		</main>
 		<footer class="row">
+			<div id="footer">
 			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
 			</p>
+			</div>
 		</footer>
 		</div>
+		<script src="js/stuff.js"></script>
 	</body>
 </html>
