--- a/published_work.html
+++ b/published_work.html
@@ -23,8 +23,10 @@
 		<main class="row">
 		</main>
 		<footer class="row">
+			<div id="footer">
 			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
 			</p>
+			</div>
 		</footer>
 		</div>
 	</body>
