--- a/drawings.html
+++ b/drawings.html
@@ -8,24 +8,51 @@
 	<body>
 		<div class="container">
 		<header class="row">
-			<div class="col-12">
+			<div id="header">
 				<h1>Jeremy Bradley Earl</h1>
 			</div>
-		</header>
-			<nav class="row">
-				<a href="index.html" class="col-2">Home</a>
+		
+			<nav class="row" id="nav">
+				<a href="index.html" class="col-2" >Home</a>
 				<a href="prints.html" class="col-2">Prints</a>
 				<a href="drawings.html" class="col-2" id="active">Drawings</a>
 				<a href="album_covers.html" class="col-2">Album Covers</a>
 				<a href="biography.html" class="col-2">Biography</a>
 				<a href="contact.html" class="col-2">Contact</a>
+				<a href="store.html" class="col-2">Store</a>
 			</nav>
+		</header>
 		<main class="row">
+			<div id="prints">
+				<div class="row">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+				</div>
+				<div class="row">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+				</div>
+				<div class="row">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+				</div>
+				<div class="row last">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+					<img src="images/D-FPO.jpg" alt="" class="col-4">
+				</div>
+			</div>
 		</main>
 		<footer class="row">
+			<div id="footer">
 			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
 			</p>
+			</div>
 		</footer>
 		</div>
+		<script src="js/stuff.js"></script>
 	</body>
 </html>
