--- a/prints.html
+++ b/prints.html
@@ -4,50 +4,77 @@
 		<meta charset="UTF-8">
 		<title>J.B.E.</title>
 		<link rel="stylesheet" href="css/styles.css">
+	
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+		<!-- Add mousewheel plugin (this is optional) -->
+		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+
+		<!-- Add fancyBox -->
+		<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+		<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+		<!-- Optionally add helpers - button, thumbnail and/or media -->
+		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 	</head>
 	<body>
 		<div class="container">
 		<header class="row">
-			<div class="col-12">
+			<div id="header">
 				<h1>Jeremy Bradley Earl</h1>
 			</div>
-		</header>
-			<nav class="row">
+		
+			<nav class="row" id="nav">
 				<a href="index.html" class="col-2">Home</a>
 				<a href="prints.html" class="col-2" id="active">Prints</a>
 				<a href="drawings.html" class="col-2">Drawings</a>
 				<a href="album_covers.html" class="col-2">Album Covers</a>
 				<a href="biography.html" class="col-2">Biography</a>
 				<a href="contact.html" class="col-2">Contact</a>
+				<a href="store.html" class="col-2">Store</a>
 			</nav>
+		</header>
 		<main class="row">
 			<div id="landscapes">
 				<div class="row">
-					<img src="images/Earl_1.jpg" alt="Landscape_#_1" class="col-4">
-					<img src="images/Earl_2.jpg" alt="Landscape_#_2" class="col-4">
-					<img src="images/Earl_3.jpg" alt="Landscape_#_3" class="col-4">
+					<a class="fancybox" rel="group" href="images/Earl_1.jpg"><img src="images/Earl_1.jpg" alt="Landscape_#_1" class="col-4" /></a>
+					<a class="fancybox" rel="group" href="images/Earl_2.jpg"><img src="images/Earl_2.jpg" alt="Landscape_#_2" class="col-4"></a>
+					<a class="fancybox" rel="group" href="images/Earl_3.jpg"><img src="images/Earl_3.jpg" alt="Landscape_#_3" class="col-4"></a>
 				</div>
 				<div class="row">
-					<img src="images/Earl_4.jpg" alt="Landscape_#_4" class="col-4">
-					<img src="images/Earl_5.jpg" alt="Landscape_#_5" class="col-4">
-					<img src="images/Earl_6.jpg" alt="Landscape_#_6" class="col-4">
+					<a class="fancybox" rel="group" href="images/Earl_4.jpg"><img src="images/Earl_4.jpg" alt="Landscape_#_4" class="col-4" /></a>
+					<a class="fancybox" rel="group" href="images/Earl_5.jpg"><img src="images/Earl_5.jpg" alt="Landscape_#_5" class="col-4"></a>
+					<a class="fancybox" rel="group" href="images/Earl_6.jpg"><img src="images/Earl_6.jpg" alt="Landscape_#_6" class="col-4"></a>
 				</div>
 				<div class="row">
-					<img src="images/Earl_7.jpg" alt="Landscape_#_7" class="col-4">
-					<img src="images/Earl_8.jpg" alt="Landscape_#_8" class="col-4">
-					<img src="images/Earl_9.jpg" alt="Landscape_#_9" class="col-4">
+					<a class="fancybox" rel="group" href="images/Earl_7.jpg"><img src="images/Earl_7.jpg" alt="Landscape_#_7" class="col-4" /></a>
+					<a class="fancybox" rel="group" href="images/Earl_8.jpg"><img src="images/Earl_8.jpg" alt="Landscape_#_8" class="col-4"></a>
+					<a class="fancybox" rel="group" href="images/Earl_9.jpg"><img src="images/Earl_9.jpg" alt="Landscape_#_9" class="col-4"></a>
 				</div>
-				<div class="row">
-					<img src="images/Earl_10.jpg" alt="Landscape_#_10" class="col-4">
-					<img src="images/Earl_11.jpg" alt="Landscape_#_11" class="col-4">
-					<img src="images/Earl_12.jpg" alt="Landscape_#_12" class="col-4">
+				<div class="row last">
+					<a class="fancybox" rel="group" href="images/Earl_10.jpg"><img src="images/Earl_10.jpg" alt="Landscape_#_10" class="col-4" /></a>
+					<a class="fancybox" rel="group" href="images/Earl_11.jpg"><img src="images/Earl_11.jpg" alt="Landscape_#_11" class="col-4"></a>
+					<a class="fancybox" rel="group" href="images/Earl_12.jpg"><img src="images/Earl_12.jpg" alt="Landscape_#_12" class="col-4"></a>
 				</div>
 			</div>
 		</main>
 		<footer class="row">
+			<div id="footer">
 			<p class="footer">&copy Jeremy Bradley Earl. All rights reserved.
 			</p>
+			</div>
 		</footer>
 		</div>
+		<script src="js/stuff.js"></script>
+		<script type="text/javascript">
+	$(document).ready(function() {
+		$(".fancybox").fancybox();
+	});
+</script>
 	</body>
 </html>
