--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>J.B.E.</title>
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="shortcut icon" href="images/JBE-icon.tif">
 	</head>
 	<body>
 		<div class="container">
